# barclays_2026

./: .gitignore  AI _ ML Modeler - Liquid Finance_JD.md  CONCISE_INTERVIEW.md  GKD_ON_POLICY_DISTILLATION_LIQUID_FINANCING.md  PART1.md  PART2.md  README.md
TAKE_HOME_PROJECTS/: PRESENTATION_TALKING_POINTS.md  PROBLEMS.md  README.md  dissertation.tex  notebook.ipynb  pyproject.toml  requirements.txt
TAKE_HOME_PROJECTS/BKP/: notebook_OLD.ipynb
TAKE_HOME_PROJECTS/charts/: p1_fee_forecast_interval.html  p1_walkforward_monitoring.html  p2_lasso_coefficients.html  p2_var_backtest.html  p3_anomaly_score_timeline.html  p4_baseline_comparison.html  p4_gru_quantile_fan.html  p5_retrieval_scores.html
TAKE_HOME_PROJECTS/data/: client_portfolios.csv  collateral_universe.csv  desk_commentary.txt  funding_spreads.csv  prime_balances.csv  prime_balances_by_client.csv
TAKE_HOME_PROJECTS/data/desk_notes/: desk_note_20260601.txt  desk_note_20260627.txt  desk_note_20260628.txt  desk_note_20260630.txt
TAKE_HOME_PROJECTS/data/policy_docs/: financing_rate_policy_v4.txt  haircut_policy_v7.txt
TAKE_HOME_PROJECTS/figures/: p1_fee_forecast_interval.html  p1_walkforward_monitoring.html  p2_lasso_coefficients.html  p3_anomaly_score_timeline.html  p4_gru_quantile_fan.html  p5_retrieval_scores.html
TAKE_HOME_PROJECTS/research/: dissertation.tex
TAKE_HOME_PROJECTS/src/liquid_financing/: __init__.py  p1_fee_forecasting.py  p2_margin_optimization.py  p3_anomaly_detection.py  p4_balance_forecasting.py  p5_rag_copilot.py  plotting.py
TAKE_HOME_PROJECTS/tests/: test_liquid_financing.py
(+21 files in other folders)
